build: update to TailwindCSS 4.0.12 and refactor dependencies
TailwindCSSを4.0.12にアップデートし、関連するPostCSS設定を変更しました。また、不要な依存関係を削除し、TailwindCSS関連のパッケージ構成を最適化しました。これにより、ビルドプロセスが最新の状態となり、不要な負荷が軽減されます。

TODO: 明朝体の当て方を後で変える

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,31 @@
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap');
+@import 'tailwindcss';
+
+@theme {
+  --color-iwdd: #c70d02;
+}
+
+body {
+  font-family: 'Shippori Mincho', serif;
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 @layer base {
   h1 {
@@ -8,6 +35,3 @@
     @apply text-xl
   }
 }
-
-@tailwind components;
-@tailwind utilities;
