feat: フォントをShippori Minchoに変更
Next.jsのGoogle Fonts機能を使用し、Shippori Minchoフォントを導入しました。これにより、フォントライブラリのインポートを簡素化し、コードの可読性と保守性を向上させました。加えて、globals.css内の不要なインポートを削除し、デザイン全体の統一性を高めました。

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap');
 @import 'tailwindcss';
 
 @theme {
   --color-iwdd: #c70d02;
-}
-
-body {
-  font-family: 'Shippori Mincho', serif;
+  --font-shipporiMincho: var(--font-shipporiMincho)
 }
 
 /*
